9 March 2018: Wouter
	- Fix #3598: Fix swig build issue on rhel6 based system.
	  configure --disable-swig-version-check stops the swig version check.

8 March 2018: Wouter
	- tag 1.7.0rc2.

7 March 2018: Wouter
	- Fixed contrib/fastrpz.patch, even though this already applied
	  cleanly for me, now also for others.
	- patch to log creates keytag queries, from A. Schulze.
	- patch suggested by Debian lintian: allow to -> allow one to, from 
	  A. Schulze.
	- Attempt to remove warning about trailing whitespace.

6 March 2018: Wouter
	- Reverted fix for #3512, this may not be the best way forward;
	  although it could be changed at a later time, to stay similar to
	  other implementations.
	- svn trunk contains 1.7.0, this is the number for the next release.
	- Fix for windows compile.
	- tag 1.7.0rc1.

5 March 2018: Wouter
	- Fix to check define of DSA for when openssl is without deprecated.
	- iana port update.
	- Fix #3582: Squelch address already in use log when reuseaddr option
	  causes same port to be used twice for tcp connections.

27 February 2018: Wouter
	- Fixup contrib/fastrpz.patch so that it applies.
	- Fix compile without threads, and remove unused variable.
	- Fix compile with staticexe and python module.
	- Fix nettle compile.

22 February 2018: Ralph
	- Save wildcard RRset from answer with original owner for use in
 	  aggressive NSEC.

21 February 2018: Wouter
	- Fix #3512: unbound incorrectly reports SERVFAIL for CAA query
	  when there is a CNAME loop.
	- Fix validation for CNAME loops.  When it detects a cname loop,
	  by finding the cname, cname in the existing list, it returns
	  the partial result with the validation result up to then.
	- more robust cachedump rrset routine.

19 February 2018: Wouter
	- Fix #3505: Documentation for default local zones references
	  wrong RFC.
	- Fix #3494: local-zone noview can be used to break out of the view
	  to the global local zone contents, for queries for that zone.